k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wangpanbot
  namespace: wangpanbot
spec:
  selector:
    app: wangpanbot
  ports:
    - name: http
      port: 80
      targetPort: 10000
  type: ClusterIP
